<?xml version="1.0" encoding="utf-8"?>
<!-- 新建相册 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_background" >

        <TextView
            android:id="@+id/tv_newPhotoAlbum_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/px31"
            android:paddingLeft="@dimen/px40"
            android:paddingRight="@dimen/px40"
            android:paddingTop="@dimen/px31"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/px32" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/newPhotoAlbum"
            android:textColor="@color/black"
            android:textSize="@dimen/px40" />

        <TextView
            android:id="@+id/tv_newPhotoAlbum_accomplish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingBottom="@dimen/px31"
            android:paddingLeft="@dimen/px40"
            android:paddingRight="@dimen/px40"
            android:paddingTop="@dimen/px31"
            android:text="@string/accomplish"
            android:textColor="@color/black"
            android:textSize="@dimen/px32" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/px56"
        android:paddingLeft="@dimen/px40"
        android:paddingRight="@dimen/px40"
        android:paddingTop="@dimen/px56" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AlbumName"
            android:textColor="@color/black"
            android:textSize="@dimen/px32" />

        <EditText
            android:id="@+id/et_newPhotoAlbum_albumName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px1"
        android:background="@android:color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/px56"
        android:paddingLeft="@dimen/px40"
        android:paddingRight="@dimen/px40"
        android:paddingTop="@dimen/px56" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AlbumDescribe"
            android:textColor="@color/black"
            android:textSize="@dimen/px32" />

        <EditText
            android:id="@+id/et_newPhotoAlbum_albumDescribe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null" />
    </LinearLayout>

</LinearLayout>