<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff" >

    <ImageView
        android:id="@+id/dynamic_details_comment_portrait"
        android:layout_width="@dimen/px58"
        android:layout_height="@dimen/px58"
        android:scaleType="fitXY"
        android:layout_marginBottom="@dimen/px44"
        android:layout_marginEnd="@dimen/px26"
        android:layout_marginLeft="@dimen/px24"
        android:layout_marginRight="@dimen/px26"
        android:layout_marginStart="@dimen/px24"
        android:layout_marginTop="@dimen/px24"
        android:src="@drawable/mid2" />

    <TextView
        android:id="@+id/dynamic_details_comment_neckname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px31"
        android:layout_toEndOf="@id/dynamic_details_comment_portrait"
        android:layout_toRightOf="@id/dynamic_details_comment_portrait"
        android:text="@string/neckname"
        android:textColor="#2b2b2b"
        android:textSize="@dimen/px24" />

    <TextView
        android:id="@+id/dynamic_details_comment_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dynamic_details_comment_neckname"
        android:layout_marginBottom="@dimen/px24"
        android:layout_marginTop="@dimen/px24"
        android:layout_toEndOf="@id/dynamic_details_comment_portrait"
        android:layout_toRightOf="@id/dynamic_details_comment_portrait"
        android:text="@string/comment_content"
        android:textColor="#919191"
        android:textSize="@dimen/px20" />

    <TextView
        android:id="@+id/dynamic_details_comment_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="@dimen/px30"
        android:layout_marginRight="@dimen/px30"
        android:layout_marginTop="@dimen/px48"
        android:text="@string/comment_time"
        android:textColor="#b8b8b8"
        android:textSize="@dimen/px18" />

</RelativeLayout>