<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/chat_framelayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1" >
    </FrameLayout>

    <RadioGroup
        android:id="@+id/chat_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/chat_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="@dimen/px5"
            android:drawableTop="@drawable/selector_bottom_home"
            android:gravity="center"
            android:paddingBottom="@dimen/px18"
            android:paddingTop="@dimen/px18"
            android:text="@string/homepage"
            android:textColor="#454545"
            android:textSize="@dimen/px18" />

        <RadioButton
            android:id="@+id/chat_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="@dimen/px5"
            android:drawableTop="@drawable/selector_bottom_pet"
            android:gravity="center"
            android:paddingBottom="@dimen/px18"
            android:paddingTop="@dimen/px18"
            android:text="@string/message"
            android:textColor="#454545"
            android:textSize="@dimen/px18" />

        <RadioButton
            android:id="@+id/chat_contacts"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="@dimen/px5"
            android:drawableTop="@drawable/selector_bottom_mine"
            android:gravity="center"
            android:paddingBottom="@dimen/px18"
            android:paddingTop="@dimen/px18"
            android:text="@string/contacts"
            android:textColor="#454545"
            android:textSize="@dimen/px18" />
    </RadioGroup>

</LinearLayout>