<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:background="#eeeeee"
    android:orientation="vertical"
    android:paddingLeft="@dimen/px16"
    android:paddingRight="@dimen/px16" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/px10" >

            <ImageView
                android:id="@+id/square_portrait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/px17"
                android:layout_marginLeft="@dimen/px14"
                android:layout_marginRight="@dimen/px17"
                android:layout_marginStart="@dimen/px14"
                android:layout_marginTop="@dimen/px14"
                android:src="@drawable/pet_10" />

            <TextView
                android:id="@+id/square_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/px14"
                android:layout_marginTop="@dimen/px27"
                android:layout_toEndOf="@id/square_portrait"
                android:layout_toRightOf="@id/square_portrait"
                android:text="@string/nickname"
                android:textColor="#333333"
                android:textSize="@dimen/px24" />

            <TextView
                android:id="@+id/square_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/square_nickname"
                android:layout_toEndOf="@id/square_portrait"
                android:layout_toRightOf="@id/square_portrait"
                android:text="@string/square_time"
                android:textColor="#c7c7c7"
                android:textSize="@dimen/px20" />

            <TextView
                android:id="@+id/add_attention"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/px24"
                android:layout_marginRight="@dimen/px24"
                android:layout_marginTop="@dimen/px31"
                android:background="@drawable/every_all_dynamic_add_attention_background"
                android:paddingBottom="2dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="2dp"
                android:text="@string/add_attention"
                android:textColor="#333333"
                android:textSize="@dimen/px28" />
        </RelativeLayout>

        <TextView
            android:id="@+id/square_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/px11"
            android:layout_marginLeft="@dimen/px14"
            android:layout_marginStart="@dimen/px14"
            android:text="@string/square_content"
            android:textColor="#333333"
            android:textSize="@dimen/px30" />

        <ImageView
            android:id="@+id/square_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:layout_marginLeft="@dimen/px14"
            android:layout_marginRight="@dimen/px14"
            android:src="@drawable/pet_7" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/square_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/px35"
                android:layout_marginLeft="@dimen/px14"
                android:layout_marginStart="@dimen/px14"
                android:layout_marginTop="@dimen/px35"
                android:drawableLeft="@drawable/address"
                android:drawableStart="@drawable/address"
                android:gravity="center"
                android:text="@string/address"
                android:textColor="#58b7e3"
                android:textSize="@dimen/px24" />

            <TextView
                android:id="@+id/square_comment_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/px482"
                android:layout_marginStart="@dimen/px482"
                android:layout_marginTop="@dimen/px35"
                android:drawableLeft="@drawable/shoucang_1"
                android:drawablePadding="@dimen/px10"
                android:drawableStart="@drawable/shoucang_1"
                android:gravity="center"
                android:text="@string/num"
                android:textColor="#919191"
                android:textSize="@dimen/px24" />

            <TextView
                android:id="@+id/square_praise_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/px600"
                android:layout_marginStart="@dimen/px600"
                android:layout_marginTop="@dimen/px35"
                android:drawableLeft="@drawable/pinglun_1"
                android:drawablePadding="@dimen/px10"
                android:drawableStart="@drawable/pinglun_1"
                android:gravity="center"
                android:text="@string/num"
                android:textColor="#919191"
                android:textSize="@dimen/px24" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>